--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,5 @@
 galaxy_info:
-  role_name: jenkins-docker
+  role_name: jenkins_docker
   author: Jerven Clark Chua
   description: Configures dockerized Jenkins CI on Debian/Ubuntu servers.
   company:
